--- a/lib/src/main/res/layout/common_dialog.xml
+++ b/lib/src/main/res/layout/common_dialog.xml
@@ -16,6 +16,6 @@
         android:layout_gravity="bottom"
         android:gravity="center"
         android:text="@string/text_loading"
-        android:textColor="#999999"
+        android:textColor="@color/hint_text_color"
         android:textSize="14sp" />
 </FrameLayout>
