--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,4 +3,9 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
+
+
+    <color name="common_text_color">#333333</color>
+    <color name="common_text_color_detail">#666666</color>
+    <color name="common_text_color_info">#999999</color>
 </resources>
