--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,11 +1,31 @@
 <resources>
 
-    <!-- Base application theme. -->
-    <style name="AppTheme" parent="Theme.AppCompat.Light.DarkActionBar">
-        <!-- Customize your theme here. -->
-        <item name="colorPrimary">@color/colorPrimary</item>
-        <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
-        <item name="colorAccent">@color/colorAccent</item>
+
+    <!-- 通用的Toolbar样式 -->
+    <style name="CommonToolbarStyle" parent="Widget.AppCompat.Toolbar">
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="titleTextAppearance">@style/ToolbarTitleTextAppearance</item>
     </style>
 
+    <!-- 通用Toolbar的标题样式 -->
+    <style name="ToolbarTitleTextAppearance" parent="TextAppearance.Widget.AppCompat.Toolbar.Title">
+        <item name="android:textColor">@android:color/white</item>
+    </style>
+
+    <!-- 通用的TextView样式 -->
+    <style name="CommonTextViewStyle" parent="Widget.AppCompat.TextView">
+        <item name="android:textColor">@color/common_text_color</item>
+        <item name="android:textSize">@dimen/common_text_size</item>
+    </style>
+
+    <style name="CommonEditTextStyle" parent="Widget.AppCompat.EditText">
+        <item name="android:textColor">@color/common_text_color</item>
+        <item name="android:textSize">@dimen/common_text_size</item>
+    </style>
+
+    <!-- 通用的Button样式 -->
+    <style name="CommonButtonStyle" parent="Widget.AppCompat.Button">
+        <item name="android:background">@drawable/bg_common_button</item>
+        <item name="android:textColor">@android:color/white</item>
+    </style>
 </resources>
