--- a/lib/src/main/res/values/colors.xml
+++ b/lib/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <color name="bg_window">#EEEEEE</color>
+
+    <color name="retry_text_color">#333333</color>
     <color name="hint_text_color">#999999</color>
 </resources>
