--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -4,26 +4,31 @@
 
     <item
         android:id="@+id/mainMenu"
+        android:icon="@drawable/main"
         android:title="@string/main_page"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/categoryMenu"
-        android:title="@string/category"
+        android:icon="@drawable/tools"
+        android:title="@string/tools"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/officialAccountMenu"
+        android:icon="@drawable/official_account"
         android:title="@string/official_account"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/toolMenu"
+        android:icon="@drawable/tools"
         android:title="@string/tool"
         app:showAsAction="ifRoom" />
 
     <item
         android:id="@+id/projectMenu"
+        android:icon="@drawable/project"
         android:title="@string/project"
         app:showAsAction="ifRoom" />
 
