修改标题栏

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,16 +6,22 @@
     android:layout_height="match_parent"
     article:context=".activity.MainActivity">
 
-    <com.google.android.material.appbar.MaterialToolbar
-        android:id="@+id/toolbar"
+    <com.hjq.bar.TitleBar
+        android:id="@+id/titleBar"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/height_toolbar" />
+        android:layout_height="@dimen/height_title_bar"
+        app:backButton="false"
+        app:lineColor="@color/common_text_color_detail"
+        app:lineSize="1px"
+        app:lineVisible="true"
+        app:rightIcon="@drawable/search"
+        app:title="@string/main_page" />
 
     <FrameLayout
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginTop="@dimen/height_toolbar"
+        android:layout_marginTop="@dimen/height_title_bar"
         android:layout_marginBottom="@dimen/height_navigation" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
@@ -25,8 +31,7 @@
         android:layout_gravity="bottom"
         app:itemBackground="@android:color/white"
         app:itemHorizontalTranslationEnabled="false"
-        app:itemIconTint="@null"
-        app:itemRippleColor="@color/colorPrimary"
+        app:itemIconTint="@color/tab_item_color"
         app:itemTextAppearanceActive="@style/MainBottomNavigationTextAppearanceActive"
         app:itemTextAppearanceInactive="@style/MainBottomNavigationTextAppearanceInactive"
         app:itemTextColor="@color/common_text_color"
