--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
-    <color name="colorAccent">#D81B60</color>
-
+    <color name="colorPrimary">@android:color/white</color>
+    <color name="colorPrimaryDark">@android:color/white</color>
+    <color name="colorAccent">@android:color/black</color>
 
     <color name="common_text_color">#333333</color>
     <color name="common_text_color_detail">#666666</color>
     <color name="common_text_color_info">#999999</color>
+
+    <color name="tab_item_color">@color/common_text_color_info</color>
+    <color name="tab_item_color_active">@color/common_text_color</color>
 </resources>
