--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,5 @@
 
     <color name="tab_item_color">@color/common_text_color_info</color>
     <color name="tab_item_color_active">@color/common_text_color</color>
+    <color name="color_placeholder">#F5F5F5</color>
 </resources>
