--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,7 +8,11 @@
     <dimen name="common_padding_start_end">12dp</dimen>
     <dimen name="height_common_text">48dp</dimen>
 
-    <dimen name="common_text_size">14dp</dimen>
+    <dimen name="common_text_size">14sp</dimen>
     <dimen name="text_size_article_content">16sp</dimen>
     <dimen name="common_text_size_info">12sp</dimen>
+
+    <dimen name="common_text_size_label">16sp</dimen>
+    <dimen name="slide_image">100dp</dimen>
+
 </resources>
