--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -14,6 +14,7 @@
         <item name="android:windowBackground">@android:color/white</item>
         <item name="buttonStyle">@style/CommonButtonStyle</item>
         <item name="editTextStyle">@style/CommonEditTextStyle</item>
+        <item name="android:statusBarColor">@color/colorPrimary</item>
     </style>
 
     <style name="SplashTheme" parent="AppTheme">
