--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,6 +3,7 @@
     <dimen name="height_title_bar">48dp</dimen>
     <dimen name="height_navigation">48dp</dimen>
 
+    <dimen name="height_tab_layout">44dp</dimen>
 
     <dimen name="common_padding_top_bottom">8dp</dimen>
     <dimen name="common_padding_start_end">12dp</dimen>
@@ -14,5 +15,8 @@
 
     <dimen name="common_text_size_label">16sp</dimen>
     <dimen name="slide_image">100dp</dimen>
+    <dimen name="height_item_history_key">48dp</dimen>
+
+    <dimen name="slide_loading_dialog">72dp</dimen>
 
 </resources>
