--- a/lib/src/main/res/layout/layout_status_view.xml
+++ b/lib/src/main/res/layout/layout_status_view.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<merge xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center"
@@ -30,4 +30,4 @@
         android:textColor="@color/retry_text_color"
         android:textSize="15sp" />
 
-</LinearLayout>
+</merge>
