增加lib版本，修改bug

--- a/app/src/main/res/navigation/main_navigation.xml
+++ b/app/src/main/res/navigation/main_navigation.xml
@@ -9,7 +9,7 @@
         android:id="@+id/navigation_home"
         android:name="com.mycroft.sample.fragment.HomeFragment"
         android:label="@string/main_page"
-        tools:layout="@layout/fragment_main" />
+        tools:layout="@layout/vertical_refresh_recycler" />
 
     <fragment
         android:id="@+id/navigation_category"
